FusionDev Backup1/src/objects/Credit_Card__c.object
<CustomObject>
    <description>Account credit cards authorized against Chase Paymentech.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Cards</relationshipLabel>
        <relationshipName>Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chase_Profile_Id__c</fullName>
        <externalId>true</externalId>
        <label>Chase Profile Id</label>
        <length>22</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>DISC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Uses expiration month and expiration year to populate 28th day of month. This is used to determine credit cards expiring this month</description>
        <formula>DATE( Value(Text(Expiration_Year__c)) , Value(Text(Expiration_Month__c)) ,28)</formula>
        <inlineHelpText>Uses expiration month and expiration year to populate 28th day of month. This is used to determine credit cards expiring this month</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Month__c</fullName>
        <description>Two digit month</description>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Year__c</fullName>
        <description>Four digit year</description>
        <label>Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>IF(OR(ISPICKVAL(Expiration_Year__c,&quot;&quot;),ISPICKVAL(Expiration_Month__c,&quot;&quot;),VALUE(&quot;20&quot;+TEXT(Expiration_Year__c)) &lt; YEAR(TODAY()), AND(VALUE(&quot;20&quot;+TEXT(Expiration_Year__c)) = YEAR(TODAY()),VALUE(TEXT(Expiration_Month__c)) &lt; MONTH(TODAY()))),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Security Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_To_ERP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send To ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_with_ERP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync with ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Credit Card</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Credit Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>